feat(swagger): auth via access token
